EXTRA_DIST = cfsml.spec bytecode.htm curspecs.htm decrypt.c fonts.html kernfunc.htm objhiera.htm objstruc.htm overview.html resmap.html respack.html said.htm scivariables.html scr000.txt scr_code.cpp script.java scripted.htm scrsrc.htm scrstruc.htm sd.c sde.c sdv.c tables.html wordfile.htm qfg1-classes.txt patch.txt pq2map.txt
