INCLUDES = -I$(top_srcdir)/src/include @ac_glib_includes@ @ac_ggi_includes@ @ac_png_includes@
LDADD = -lefence -lglib -lscicore $(LDADD_ALL)
lib_LIBRARIES = libscigraphics.a
libscigraphics_a_SOURCES = graphics.c font.c mcursor.c graphics_ggi.c graphics_png.c input.c input_ggi.c window.c menubar.c engine_graphics.c
