INCLUDES = -I$(top_srcdir)/src/include @ac_ggi_includes@ @ac_png_includes@ @X_CFLAGS@
EXTRA_DIST = graphics_ddraw.c graphics_dgfx.c
LDADD = $(LDADD_ALL)
lib_LIBRARIES = libscigraphics.a
libscigraphics_a_SOURCES = con_io.c con_font.c graphics_glx.c graphics.c font.c mcursor.c graphics_ggi.c graphics_png.c input.c input_ggi.c window.c menubar.c engine_graphics.c
