SUBDIRS = win32
EXTRA_DIST = old_objects.h graphics_glx.h kernel.h event.h    \
	soundserver.h kdebug.h sci_conf.h resource.h script.h \
	vocabulary.h sound.h uinput.h console.h script.h vm.h \
	engine.h util.h heap.h menubar.h versions.h sci_dos.h \
	gfx_driver.h  gfx_operations.h  gfx_options.h         \
	gfx_resmgr.h gfx_resource.h  gfx_widgets.h            \
	gfx_state_internal.h  gfx_system.h gfx_tools.h        \
	sci_graphics.h sci_widgets.h scitypes.h sbtree.h      \
	gfx_drivers_list.h sciresource.h midiout.h            \
	midi_device.h modules.h
