INCLUDES = -I$(top_srcdir)/src/include @ac_png_includes@
LDADD = ../scicore/libscicore.a
EXTRA_DIST = sciunpack.h bdf.h bdfP.h
bin_PROGRAMS = sciunpack sciconsole scidisasm scipack bdftofont fonttoc
sciunpack_SOURCES = sciunpack.c listwords.c scriptdump.c vocabdump.c
sciunpack_LDADD = ../scicore/libscicore.a @ac_glx_libraries@ @ac_glx_libraries@ @ac_png_libraries@
scidisasm_SOURCES = scidisasm.c
sciconsole_LDADD = ../engine/libsciengine.a ../scicore/libscicore.a @ac_curses_libraries@ @ac_readline@ @ac_curses_libraries@ -lm
sciconsole_SOURCES = sciconsole.c
scipack_LDADD = ../scicore/libscicore.a
scipack_SOURCES = scipack.c
bdftofont_SOURCES = bdf.c bdfgrid.c bdfgname.c bdftofont.c
fonttoc_SOURCES = fonttoc.c
