EXTRA_DIST = freesci.def getopt.c msvc60/classes.dsp msvc60/console.dsp \
	msvc60/freesci.dsw msvc60/fsci_dll.dsp msvc60/listwords.dsp msvc60/scidisasm.dsp \
	msvc60/sciunpack.dsp msvc60/sciv.dsp msvc60/scriptdump.dsp msvc60/vocabdump.dsp \
	msvc71-2003/freesci.sln msvc71-2003/fsci_dll/fsci_dll.vcproj msvc71-2003/sciv/sciv.vcproj \
	msvc80-2005/freesci.sln msvc80-2005/fsci_dll/fsci_dll.vcproj msvc80-2005/sciv/sciv.vcproj \
	msvc90-2008/freesci.sln msvc90-2008/fsci_dll/fsci_dll.vcproj msvc90-2008/sciv/sciv.vcproj
noinst_LIBRARIES = libsciwin32.a
libsciwin32_a_SOURCES = usleep.c
